Uploaded the image from dropzone.

--- a/petsocial/src/assets/css/bootstrap.css
+++ b/petsocial/src/assets/css/bootstrap.css
@@ -6839,10 +6839,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f58c20', end
 .register_sec ul li a:hover{ text-decoration:underline;}
 
 .register_sec ul li input[type="submit"]:hover .popup_sec{ display:block;} 
-.popup_sec{ width:500px; height:260px; margin:auto; border: 4px solid #FFF; padding:20px; background:#f7f6f7; box-shadow:0px 0px 10px #000; left:0px; right:0px; top:30%; position:absolute;}
+.popup_sec{ width:500px; margin:auto; border: 4px solid #FFF; padding:20px; background:#f7f6f7; box-shadow:0px 0px 10px #000; left:0px; right:0px; top:30%; position:absolute;}
 .clos_btn{ width:100%; height:auto; float:left; clear:both; margin-bottom: 20px;margin-top: -12px;}
 .clos_btn img { float:right; cursor:pointer;}
-.pop_hdr{ width:100%; height:auto; float:left; background:url(../img/h1_lin.png) bottom left repeat-x; font-size:17px; color:#5d5959;  font-family:"Helvetica Neue"; text-align:center; padding-bottom:16px; margin-bottom:40px;}
+.pop_hdr{ width:100%; height:auto; float:left; background:url(../img/h1_lin.png) bottom left repeat-x; font-size:20px; color:#5d5959;  font-family:"Helvetica Neue"; padding-bottom:16px; margin-bottom:40px;}
 .man_contnt{font-size:26px; color:#5d5959;  font-family:"Helvetica Neue"; font-weight:bold; text-align:center; width:100%;}
 .man_contnt input[type="submit"]{ width:140px; height:46px; margin:auto; border:1px solid #c25a0f; font-family:"Helvetica Neue"; font-weight:bold;
 color: white;
