--- a/petsocial/public/css/bootstrap.css
+++ b/petsocial/public/css/bootstrap.css
@@ -6476,7 +6476,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3891f', end
 	box-shadow: 0 1px 0 #ffcc30 inset;
 	height: auto;
 	padding: 0.5% 1.5% 0.5% 0.5%;
-	width: auto;
+	width: 115px;
 	margin: 0px 8px 0px 0px;
 	float: left;
 	font-family: Arial, Helvetica, sans-serif;
