--- a/petsocial/src/assets/css/style.css
+++ b/petsocial/src/assets/css/style.css
@@ -398,7 +398,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3891f', end
 	box-shadow: 0 1px 0 #ffcc30 inset;
 	height: auto;
 	padding: 0.5% 2% 0.5% 1%;
-	width: auto;
+	width: 115px;
 	margin: 0px 10px 0px 0px;
 	float: left;
 	font-family: Arial, Helvetica, sans-serif;
